fix All Wishlists Squished Layout Bug

--- a/elysian_wishlist/static/styles/main.css
+++ b/elysian_wishlist/static/styles/main.css
@@ -6,7 +6,7 @@ body, html {
 
 .content {
     margin: 0 auto;
-    width: 400px;
+    width: 100%;
 }
 
 table, td, th {
